initial homepage styling

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,7 +1,8 @@
 html {
-  font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  background-color: #ecebe1;
+  color: #afaaa5;
 }
 body {
   margin: 0;
@@ -185,7 +186,7 @@ textarea {
   font: inherit;
 }
 html {
-  font: 112.5%/1.45em georgia, serif;
+  font: 112.5%/1.45em Palatino, serif;
   box-sizing: border-box;
   overflow-y: scroll;
 }
@@ -200,7 +201,7 @@ html {
 }
 body {
   color: hsla(0, 0%, 0%, 0.8);
-  font-family: georgia, serif;
+  font-family: Palatino, serif;
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
@@ -619,4 +620,9 @@ pre tt:after {
   html {
     font-size: 100%;
   }
+}
+
+blockquote {
+  color: #afaaa5;
+  line-height: 1.3em;
 }
