--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -4,6 +4,7 @@ html {
   -webkit-text-size-adjust: 100%;
   background-color: #ecebe1;
   color: #afaaa5;
+  font-family: Palatino, serif;
 }
 *,
 *:before,
@@ -23,7 +24,64 @@ section {
 
 blockquote {
   color: #afaaa5;
-  line-height: 1.3em;
+  line-height: 0.7em;
+}
+
+button {
+  background-color: #dab76c;
+  border: 0;
+  color: #fff;
+  padding: 0.5em 1em;
+  font-size: 3em;
+  font-family: Palatino, serif;
+  cursor: pointer;
+}
+
+input:placeholder,
+textarea:placeholder,
+input:-webkit-placeholder,
+textarea:-webkit-placeholder {
+  color: #afaaa5;
+}
+
+input,
+textarea {
+  margin-bottom: 1em;
+  /* border: 4px solid rgba(222, 209, 203, 0.7); */
+  border: 0;
+  font-size: 20px;
+  padding: 1em;
+  resize: none;
+  color: #afaaa5;
+  background-color: rgba(255, 255, 255, 0.5);
+  transition: background-color 0.3s ease-in-out;
+}
+
+textarea {
+  height: 200px;
+}
+
+button:hover {
+  background-color: #e6c376;
+}
+
+button:focus {
+  outline: none;
+  border-color: #dab76c;
+}
+
+input:focus,
+textarea:focus {
+  outline: none;
+  border-color: #dab76c;
+  background-color: #fff;
+}
+
+form input,
+form button,
+form textarea {
+  display: block;
+  width: 100%;
 }
 
 .shape {
@@ -33,8 +91,7 @@ blockquote {
 }
 
 .shape--triangle {
-  animation: 120s rotateAnticlockwise linear infinite,
-    150s floatUp ease-in infinite;
+  animation: 120s rotateAnticlockwise linear infinite, 150s floatUp ease-in infinite;
   animation-delay: -70s;
   right: 25vmin;
 }
@@ -103,4 +160,13 @@ blockquote {
   border-bottom: 5px solid #dab76c;
   border-right: 5px solid #dab76c;
   transform: rotate(45deg);
+}
+
+h2 {
+  font-size: 12vw;
+  margin: 0.4em 0;
+}
+
+h3 {
+  font-size: 6vw;
 }
